<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_button_text">Spotify Streamer</string>
    <string name="scores_button_text">Scores App</string>
    <string name="library_button_text">Library App</string>
    <string name="build_button_text">Build It Bigger</string>
    <string name="xyz_button_text">XYZ Reader"</string>
    <string name="capstone_button_text">Capstone: My Own App</string>
    <string name="spotify_toast_text">This button will launch my spotify streamer app!</string>
    <string name="scores_toast_text">This button will launch my scores app!</string>
    <string name="library_toast_text">This button will launch my library app!</string>
    <string name="build_toast_text">This button will launch my build it bigger app!</string>
    <string name="xyz_toast_text">This button will launch my xyz reader app!</string>
    <string name="capstone_toast_text">This button will launch my capstone app!</string>


</resources>
