<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:gravity="center"
        android:text="My Nanodegree Apps!"
        android:textSize="24sp" />

    <Button
        android:id="@+id/spotify_button"
        style="@style/ButtonStyle"
        android:text="@string/spotify_button_text"
        android:onClick="spotifyToast"/>

    <Button
        style="@style/ButtonStyle"
        android:text="@string/scores_button_text"
        android:onClick="scoresToast"/>

    <Button
        style="@style/ButtonStyle"
        android:text="@string/library_button_text"
        android:onClick="libraryToast"/>

    <Button
        style="@style/ButtonStyle"
        android:text="@string/build_button_text"
        android:onClick="buildToast"/>

    <Button
        style="@style/ButtonStyle"
        android:text="@string/xyz_button_text"
        android:onClick="xyzToast"/>

    <Button
        style="@style/ButtonStyle"
        android:background="#E00000"
        android:text="@string/capstone_button_text"
        android:textColor="#FFFFFF"
        android:onClick="capstoneToast"/>


</LinearLayout>
